# GLSOFT

./: CMakeLists.txt
src/: application.c  application.h  main.c  math_utils.c  math_utils.h  renderer.c  renderer.h  sorting_algo.c  sorting_algo.h
